--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -8,4 +8,6 @@ editor_options:
   chunk_output_type: console
 ---
 
-Welcome to my research website.
+Welcome to my teeth growth analysis website.
+
+* [Teeth Growth Analysis](teeth.html)
