wflow_publish("analysis/index.rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -11,3 +11,7 @@ editor_options:
 Welcome to my teeth growth analysis website.
 
 * [Teeth Growth Analysis](teeth.html)
+
+Check out my teammate's teeth!
+
+* [xxx's analysis]()
